paginate endpoint record/filter
