# src/main/resources/openapi.yml
@@ -315,6 +315,7 @@ paths:
           schema:
             type: integer
             format: int32
+            default: 0
           required: false
           description: page number
         - in: query
@@ -322,6 +323,7 @@ paths:
           schema:
             type: integer
             format: int32
+            default: 5
           required: false
           description: page size
       responses:
@@ -330,9 +332,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/RecordResponseOpenApi'
+                $ref: '#/components/schemas/RecordPagedResponseOpenApi'
   /record/{recordId}:
     get:
       summary: get record by id
